--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,13 @@ android {
             renderscript.srcDirs = ['src']
             res.srcDirs = ['res']
             assets.srcDirs = ['assets']
+
+            // Fixed Issue : "android studio java.lang.unsatisfiedlinkerror: couldn't load find library returned null"
+            // Cause : For android studio : The JNI files should be placed in the /src/main/jniLibs folder.
+            // Fix : Mapping the jniLibs 's source Directories with Lib's folder
+            jniLibs.srcDirs = ['libs']
+
+
         }
 
         // Move the tests to tests/java, tests/res, etc...
