--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Mar 02 03:23:32 CST 2015
-sdk.dir=/Users/gus/Library/Android/sdk
+#Tue Mar 10 17:30:10 CDT 2015
+sdk.dir=F\:\\DevTools\\Android\\SDK
