--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,6 +12,8 @@
 	<uses-permission android:name="android.permission.INTERNET"/> <!-- Localytics -->
 	<uses-permission android:name="android.permission.VIBRATE"/> <!-- Game -->
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/> <!-- Updates -->
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 	<application
 		android:enabled="true"
 		android:allowBackup="true"
@@ -123,4 +125,6 @@
 			android:configChanges="orientation|keyboardHidden|screenSize"
 			/>
 	</application>
+
+
 </manifest>
