BioHarness Integration Complete
Bluetooth capability added as "connect" button on menu screen.
BioHarness breathing rate shown in menu screen directly under button for
testing.

Updates:

- Resolved bug on screen orientation change with
android:configChanges="orientation|keyboardHidden|screenSize">

- Added in values/strings_trans.xml:
<string name="Menu_connect">" Connect "</string>
<string name="status">" Bluetooth Status "</string>
<string name="initial0">" 000 "</string>

- Updated main.xml with text field for breathing rate

- in MenuHome.java:
- Added Bluetooth initialization to MenuHome.java in onCreate function,
main Bluetooth code in setupLayout function; added imports, variables at
top of file, and three helper functions just under onCreate()
- in updateLayout function added line to make Connect button similar
format to other buttons
formatMenuItem(((TextView) findViewById(R.id.ButtonConnect)),
R.string.Menu_connect);

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,13 +22,14 @@
 		android:label="@string/App_name"
 		android:description="@string/App_description">
 		<activity
-			android:name=".MenuHome">
-			<intent-filter>
-				<action	android:name="android.intent.action.MAIN" />
-				<category android:name="android.intent.category.LAUNCHER" />
-			</intent-filter>
-		</activity>
-		<activity
+			android:name=".MenuHome"
+            android:configChanges="orientation|keyboardHidden|screenSize">
+            <intent-filter>
+                <action	android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
 			android:name=".ToolsDownloader"
 			android:configChanges="orientation|keyboardHidden|screenSize">
 			<!--
