--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Mar 10 17:30:10 CDT 2015
-sdk.dir=F\:\\DevTools\\Android\\SDK
+#Sat Mar 28 00:49:25 CDT 2015
+sdk.dir=/Users/gus/Library/Android/sdk
