Health and Score adapted for BPM Goals
In GUIScore, the health and score gains are multiplied by a factor of 2
when the user's BPM is within their BPM goal.

Added switch cases for the goal, and then placed the existing switch
case statements for gain awarding within each goal case.

--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Mar 28 00:49:25 CDT 2015
-sdk.dir=/Users/gus/Library/Android/sdk
+#Tue Mar 31 12:59:02 CDT 2015
+sdk.dir=C\:\\Users\\Owner\\AppData\\Local\\Android\\sdk
