--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Mar 31 12:59:02 CDT 2015
-sdk.dir=C\:\\Users\\Owner\\AppData\\Local\\Android\\sdk
+#Sun Apr 12 17:45:20 CDT 2015
+sdk.dir=F\:\\DevTools\\Android\\SDK
