--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Apr 12 17:45:20 CDT 2015
-sdk.dir=F\:\\DevTools\\Android\\SDK
+#Sun Apr 12 22:08:34 CDT 2015
+sdk.dir=/Users/gus/Library/Android/sdk
